tests/snapshots/cli__severity_floor_default.snap
---
source: tests/cli.rs
expression: stdout
---
warning <stdin>:1:1 Sentence is 24 words long (maximum 22). Consider splitting it into shorter sentences. [structure.sentence-too-long]
warning <stdin>:1:11 Weasel phrase "rather" weakens the statement. Replace with concrete language or remove it. [lexicon.weasel-words]
info    <stdin>:1:1 Flesch-Kincaid grade 6.3 (target ≤ 9.0). [readability.score]
info    <stdin>:1:1 Sentence starts with a bare demonstrative "this". Name the referent (e.g. "this change", "cette décision") to avoid forcing the reader to guess. [syntax.unclear-antecedent]

summary: 2 warnings, 2 info.
→ run 'lucid-lint explain <rule-id>' — seen here: structure.sentence-too-long, lexicon.weasel-words, readability.score + 1 more
────────────────────────────────────────────────────────────
score: 45/100
       structure    █▎░░░  5/20
       rhythm       █████  20/20
       lexicon      █▎░░░  5/20
       syntax       ██▌░░  10/20
       readability  █▎░░░  5/20
